kubernetes/envoy-gateway/gateway-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-gateway
  namespace: envoy-gateway-system
  annotations:
    metallb.io/address-pool: envoy-gateway-pool
  prometheus.io/scrape: "true"
  prometheus.io/port: "9901"
spec:
  type: LoadBalancer
